<resources>
    <string name="app_name">xdd</string>
    <string name="madinat_makadi_safaga_road_makadi_bay">Madinat Makadi, Safaga Road, Makadi Bay, Египет</string>
    <string name="for_a_tour_with_flights">for a tour with flights</string>
    <string name="_5_perfect">5 perfect</string>
    <string name="steigenberger_makadi">Steigenberger Makadi</string>
    <string name="from_134_678">From 134 678$</string>
    <string name="about_hotel">About Hotel</string>
    <string name="hotel">Hotel</string>
    <string name="essentials">Essentials</string>
    <string name="what_s_not_included">What\'s not included</string>
    <string name="razdelenie">______________________________________________________</string>
    <string name="what_s_included">What\'s included</string>
    <string name="about_hotel2">About Hotel</string>
</resources>