<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About Hotel"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:layout_width="73dp"
        android:layout_height="20dp"
        android:background="#EAE5E5"
        android:gravity="center"
        android:text="3rd Line"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="84dp" />

    <TextView
        android:layout_width="157dp"
        android:layout_height="21dp"
        android:background="#EAE5E5"
        android:gravity="center"
        android:text="paid Wi-Fi in the lobby"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="83dp" />

    <TextView
        android:layout_width="143dp"
        android:layout_height="25dp"
        android:background="#EAE5E5"
        android:gravity="center"
        android:text="30km to the airport"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="124dp" />


    <TextView
        android:layout_width="137dp"
        android:layout_height="25dp"
        android:background="#EAE5E5"
        android:gravity="center"
        android:text="1km to the beach"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="124dp" />

    <TextView
        android:layout_width="319dp"
        android:layout_height="88dp"
        android:gravity="left"
        android:text="VIP-class hotel with its own golf courses. High level of service. We recommend it for a respectable holiday. The hotel accepts guests over 18 years of age!"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="190dp"
        android:background="@drawable/border2"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="295dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/emojihappy" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="75sp"
            android:background="@drawable/tick" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="145sp"
            android:background="@drawable/closesquare" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_hotel2"
            android:textSize="17dp"
            android:textStyle="bold"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/essentials"
            android:textSize="13dp"
            android:textColor="#6C6767"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/razdelenie"
            android:layout_marginTop="45dp"

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_s_included"
            android:textSize="17dp"
            android:textStyle="bold"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="75dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/essentials"
            android:textSize="13dp"
            android:textColor="#6C6767"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="95dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/razdelenie"
            android:layout_marginTop="115dp"

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_s_not_included"
            android:textSize="17dp"
            android:textStyle="bold"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="145dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/essentials"
            android:textSize="13dp"
            android:textColor="#6C6767"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="165dp" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/biggersign"
            android:layout_marginLeft="310sp"
            android:layout_marginTop="15dp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/biggersign"
            android:layout_marginLeft="310dp"
            android:layout_marginTop="85dp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/biggersign"
            android:layout_marginLeft="310dp"
            android:layout_marginTop="150dp" />




    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>